# n-Queens-Solver

./: .gitignore  CMakeLists.txt  README.md  backtracking.cpp  backtracking.h  evolution.cpp  evolution.h  main.cpp  population.cpp  population.h  simulatedannealing.cpp  simulatedannealing.h  solution.cpp  solution.h  threadedannealing.cpp  threadedannealing.h
